# rotd

./: .gitignore  CLAUDE.md  CLI_COMMANDS.md  Cargo.toml  LICENSE  Makefile  README.md  ROTD.md  ROTD_MAU_Plan.md  ROTD_UPDATES.md  SESSION_SUMMARY.md  TODO_1.2.1_TO_1.3.0.md  cleanup_workflow_runs.sh  multiagent_coordination_details.md  multiagent_coordination_spec.md  pss_score.py  rustfmt.toml  update_rotd.sh
.github/workflows/: ci.yml  release.yml
.rotd/: tasks.jsonl
docs/: AGENT_USAGE.md  CHANGELOG.md  CLI_COMMANDS.md  CLI_UPDATE_IMPLEMENTATION_PLAN.md  CONTRIBUTING.md  GIT_COMMIT_RULES.md  OVERVIEW.md  PRIMER_STRATEGY.md  README_CLI.md  ROTD.md  ROTD_UPDATE_PROTOCOL.md  prompts.md
docs/audit_rules/: BUCKLE_MODE_TRIGGER.md
docs/recovery/: BUCKLE_MODE.md
examples/: README_coordination.md  active_work_registry.json  coordination_directory_structure.txt  dependency_map.json  lessons_learned.jsonl  periodic_review.md  pss_score.jsonl  quota.json  tasks.jsonl  test_summary.json  update_verification_checklist.md
schema/: README.md  agent_config.schema.json  coordination_log.schema.json  dependency_map.schema.json  heartbeat.schema.json  lock_file.schema.json  pss_score.schema.json  quota.schema.json  task.schema.json  task_history.v1.json  work_registry.schema.json
scripts/: README.md  install.sh  manual_update.fish  manual_update.sh
src/: agent.rs  audit.rs  common.rs  config.rs  coord.rs  fs_ops.rs  github.rs  history.rs  human.rs  main.rs  pss.rs  schema.rs
src/cli/commands/: buckle_mode.rs  mod.rs
tests/: integration_test.rs
