[package]
name = "rotd"
version = "0.1.0"
edition = "2021"
description = "Runtime-Oriented Test Discipline CLI utility"
authors = ["ROTD Team"]
license = "MIT"
repository = "https://github.com/jmfigueroa/rotd"
readme = "README.md"
keywords = ["testing", "tdd", "development", "cli"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rotd"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
colored = "2"
walkdir = "2"
jsonschema = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json", "blocking"] }
semver = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true